# rust-euler

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: empty_solution.rs
src/: lib.rs  main.rs  prime.rs
