[package]
name = "project-euler"
version = "0.1.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "euler"
path = "src/lib.rs"

[[bin]]
name = "euler"
path = "src/bin/main.rs"

[dependencies]
select = "0.4.3"
reqwest = "0.9.19"
textwrap = "0.11"
threadpool = "1.7"
